# Stack

./: CMakeLists.txt  Stack.sln
Stack/: CMakeLists.txt  Program.cpp  Stack.vcxproj  Stack.vcxproj.filters  commands.cpp  commands.h  commands.inl  cpu.cpp  cpu.h  cpu.inl  input.txt  memory.cpp  memory.h  stack.h  stack.hpp  stack.inl
Stack/stack_dir/: CMakeLists.txt  library.h  stack.h  stack.hpp  stack.ii
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj
